# CityLearnRL-Bioinformatica

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  COMPATIBILITY_GUIDE.md  README.md  generate_plots.sh  jacopoparretti@157.27.31.122  pyproject.toml  requirements.txt  todo.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
AICrowd/: AICrowdControl.py  __init__.py  requirements.txt  train_ppo.py  train_sac.py
data/citylearn_challenge_2021/: schema.json
data/citylearn_challenge_2022_phase_1/: schema.json
docs/: CONTRIBUTING.md  SETUP.md
env/: local_env_py3_8_20.yaml
notebooks/: PPO_TD3_tutorial.ipynb  PPO_tutorial.ipynb  tutorial.ipynb
notebooks/.ipynb_checkpoints/: PPO_tutorial-checkpoint.ipynb  implemented_tutorial-checkpoint.ipynb  tutorial-checkpoint.ipynb
notebooks/models/: PPO_TD3_tutorial.ipynb
notebooks/results/: log_PPO.csv  log_SAC.csv  log_TD3.csv  ppo_rewards_seed0.csv  ppo_rewards_seed1.csv  ppo_rewards_seed2.csv  ppo_rewards_seed3.csv  ppo_rewards_seed4.csv  sac_rewards_seed0.csv  sac_rewards_seed1.csv  sac_rewards_seed2.csv  sac_rewards_seed3.csv  sac_rewards_seed4.csv
results/ppo/: rewards_seed_0.npy  rewards_seed_1.npy  rewards_seed_2.npy  (+2 more)
scripts/: generate_plots.sh
src/: plot_multiple_rewards.py  plot_rewards.py  ppo_train.py  td3_train.py  train_multiple_seeds.py  train_ppo.py  train_sac.py  utils.py  wrappers.py
ssh_cluster/: README.md  create_env.sh  install_packages.sh  requirements.txt  setup.sh  sync.sh  td3_training.py  td3_training_fixed.py
thesis_files/: discorso_tesi.pages
utils/: plot_utils.py
(+29 files in other folders)
